# Qallets

./: CMakeLists.txt  LICENSE  P1_Dice.cpp  P1_Dice.h  P2_SnowDiamond.cpp  P2_SnowDiamond.h  main.cpp
include/: main.h
include/idea/: I1_DndDice.h  I2_Diamond.h
include/project/: P1_Dice.h  P2_SnowDiamond.h
include/question/: Q1_LC1_TwoSum.h
include/tool/: ConsoleToWindow.h  FtxuiTools.h  Math.h  Template.h
src/: main.cpp
src/idea/: I1_DndDice.cpp  I2_Diamond.cpp
src/project/: P1_Dice.cpp  P2_SnowDiamond.cpp
src/question/: Q1_LC1_TwoSum.cpp
src/tool/: ConsoleToWindow.cpp  FtxuiTools.cpp  Math.cpp  Template.cpp
